--- a/backend/api/templates/api/index.html
+++ b/backend/api/templates/api/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="/static/favicon.ico">
-    <title>Project Name</title>
+    <title>PX4-AUTOPILOT</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but Project Name doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but PX4-AUTOPILOT doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
